midas-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: midas-web-deployment
  labels:
    app: midas-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: midas-web
  template:
    metadata:
      labels:
        app: midas-web
    spec:
      hostname: midas-web
      subdomain: alexhoffer01
      containers:
      - name: midas-web
        image: midas-web:v0
        imagePullPolicy: Never
        ports:
        - containerPort: 80
