node-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-server-deployment
  labels:
    app: node-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-server
  template:
    metadata:
      labels:
        app: node-server
    spec:
      hostname: node-server
      subdomain: alexhoffer01
      containers:
      - name: node-server
        image: node-server:v0
        imagePullPolicy: Never
        ports:
        - containerPort: 80
