node-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-server-service
  labels:
    app: node-server
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: node-server
