new-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-server-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: node-server-deployment
          servicePort: 80
