node-server-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-server-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: node-server-service
          servicePort: 80
